Static Page Updates

--- a/Static Pages/legal.html
+++ b/Static Pages/legal.html
@@ -18,7 +18,7 @@ ol {
 	<h2>LINKED SITES </h2>
 	<p>The linked sites, if any, are not under the control of DR Power Equipment and DR Power Equipment is not responsible for the content of any linked site or any link contained in a linked site. DR Power Equipment reserves the right to terminate any link or linking program at any time. DR Power Equipment does not endorse companies or products to which it links and reserves the right to note as such on its web pages. If you decide to access any of the third party sites linked to this Site, you do this entirely at your own risk. </p>
 	<h2>PRICING</h2>
-	<p>All prices on this site are in U.S. dollars and subject to change at any time. In the event of an incorrect price, we reserve the right to correct pricing errors at the time of sale. For VT deliveries and pick-ups, applicable state sales tax will be added. </p>
+	<p>All prices on this site are in U.S. dollars and subject to change at any time. In the event of an incorrect price, we reserve the right to correct pricing errors at the time of sale. For deliveries and pick-ups, applicable state sales tax will be added. </p>
 
 	<h2>DISCLAIMER </h2>
 	<p>We do not promise that the Materials will work on your computer and we are not responsible if they do not. </p>
