--- a/Static Pages/privacy-policy.html
+++ b/Static Pages/privacy-policy.html
@@ -10,6 +10,13 @@
 	questions regarding Secure Shopping on our website, please contact us.</p>
 	<h3>Your credit card number is secure</h3>
 	<p>When you use your credit card to shop our Site, rest assured that the transaction is secure. Our servers use (TLS), an advanced encryption technology that works with Google Chrome (version 40 and above), Microsoft Internet Explorer (version 11.0 and above), Microsoft Edge, Firefox (version 35 and above), Safari (version 8.0 and above). Note: You should always update your browsers to the latest versions to mitigate vulnerabilities. This technology safeguards your personal information and guarantees privacy.</p>
+
+			<!-- McAfee Secure Trustmark for www.drpower.com -->
+			<a target="_blank" href="https://www.mcafeesecure.com/verify?host=www.drpower.com">
+				<img class="mfes-trustmark" border="0" src="//cdn.ywxi.net/meter/www.drpower.com/101.gif" width="125" height="55" title="McAfee SECURE sites help keep you safe from identity theft, credit card fraud, spyware, spam, viruses and online scams" alt="McAfee SECURE sites help keep you safe from identity theft, credit card fraud, spyware, spam, viruses and online scams" oncontextmenu="alert('Copying Prohibited by Law - McAfee Secure is a Trademark of McAfee, Inc.'); return false;"></a>
+
+			<!-- End McAfee Secure Trustmark -->
+
 	<h3>How to check the security of your browser</h3>
 	<p>To check the security of your connection, look at the lower left- or right-hand corner of your browser window after accessing the server. If you see an unbroken key or a closed lock (depending on
 	your browser), then SSL is active and the page you are accessing is being transmitted by SSL. You can also double-check by looking at the URL line of your browser. When accessing a secure page, the
