--- a/Static Pages/shipping-overview.html
+++ b/Static Pages/shipping-overview.html
@@ -22,57 +22,60 @@ table th:last-child {
 	</div>
 	<h3>Standard Shipping</h3>
 	<table class="table">
-		<thead>
-			<tr>
-				<th>Standard Sized Item Subtotal</th>
-				<th>Shipping Charge</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<td>Up to $10.00</td>
-				<td>$6.99</td>
-			</tr>
-			<tr>
-				<td>$10.01 to $20.00</td>
-				<td>$8.99</td>
-			</tr>
-			<tr>
-				<td>$20.01 to $40.00</td>
-				<td>$11.99</td>
-			</tr>
-			<tr>
-				<td>$40.01 to $60.00</td>
-				<td>$13.99</td>
-			</tr>
-			<tr>
-				<td>$60.01 to $80.00</td>
-				<td>$15.99</td>
-			</tr>
-			<tr>
-				<td>$80.01 to $100.00</td>
-				<td>$16.99</td>
-			</tr>
-			<tr>
-				<td>$100.01 to $150.00</td>
-				<td>$18.99</td>
-			</tr>
-			<tr>
-				<td>$150.01 to $200.00</td>
-				<td>$20.99</td>
-			</tr>
-			<tr>
-				<td>$200.01 to $300.00</td>
-				<td>$30.99</td>
-			</tr>
-			<tr>
-				<td>Over $300.00</td>
-				<td>$36.99</td>
-			</tr>
-		</tbody>
-	</table>
+          <thead>
+            <tr>
+              <th style="text-align: left">Standard Sized Items Subtotal</th>
+              <th style="text-align: left">Standard Shipping</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Up to $40.00</td>
+              <td>$9.99</td>
+            </tr>
+            <tr>
+              <td>$40.01 to $100</td>
+              <td>$12.99</td>
+            </tr>
+            <tr>
+              <td>$100.01 to $299.99</td>
+              <td><strike>$24.99</strike> FREE</td>
+            </tr>
+            <tr>
+              <td>Over $300</td>
+              <td><strike>$49.99</strike> FREE</td>
+            </tr>
+          </tbody>
+        </table>
 	<h3>2-Day/Rush Shipping</h3>
 	<p>2-Day/Rush Shipping is possible on all items. Available for most OVERSIZED UPS deliveries. Please contact Customer Support for availability and pricing.</p>
 	<p>Items on backorder will be 2-Day/Rush Shipped as soon as they become available.</p>
 	<p>Most expedited shipments arrive within 2 business days once they ship from our warehouse.</p>
+        <table class="table">
+          <thead>
+            <tr>
+              <th style="text-align: left">Standard Sized Items Subtotal</th>
+              <th style="text-align: left">2-day/rush Shipping</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Up to $40.00</td>
+              <td>$29.99</td>
+            </tr>
+            <tr>
+              <td>$40.01 to $100.00</td>
+              <td>$49.99</td>
+            </tr>
+            <tr>
+              <td>$100.01 to $299.99</td>
+              <td>$89.99</td>
+            </tr>
+            <tr>
+              <td>Over $300.00</td>
+              <td>$109.99</td>
+            </tr>
+          </tbody>
+        </table>
+	
 </div>
