remove 6 month home trial

--- a/Content Zones/home.html
+++ b/Content Zones/home.html
@@ -43,7 +43,9 @@
 			</div>
 			<div class="col-md-6"> <h2 class="text-uppercase mb-4 homepage-products-title">SPARE BATTERY</h2> <h5 class="mb-4 homepage-products-tagline"> 	<strong>Never Run Out of Charge with DR's LiPRO Interchangeable Battery System</strong> </h5> <p class="mb-4 homepage-products-description"> 	What happens if you run out of charge before you've finished mowing your lawn? Some battery-electric mowers have their batteries built-in, forcing you to stop mowing while you wait for them to recharge. But with the DR® Battery-Powered Yard Tools LiPRO battery, if it runs low, simply drop in a freshly-charged spare in seconds and keep right on working. </p> </div></div>
 	</div>
-</section><section id="homepage-bottom-banner" class="mt-5">
+</section>
+
+<!-- <section id="homepage-bottom-banner" class="mt-5">
 		</section>
 
-	<div class="content"><section id="homepage-guarantee"> <div class="container"> 	<div class="row">  <div class="col-md-7 mb">  	<div class="guarantee tinted">   <h2>YOUR SATISFACTION IS GUARANTEED.</h2>   <p>   	As a small Vermont company, each customer matters to us. We   	promise that every contact with us - from sale to service to   	ongoing support - will be friendly, responsive, and reliable.   	Give us a try . . . we won't let you down!   </p>  	</div>  </div>  <div class="col-md-5">  	<h2>buy with confidence</h2>  	<div class="badge badge-primary">   <h1><em>2</em></h1>   <p>YEAR WARRANTY (MOWERS)</p>  	</div>  	<div class="badge badge-secondary">   <h1><em>6</em></h1>   <p>MONTH HANDS-ON TRIAL</p>  	</div>  </div> 	</div> </div></section></div>
+	 <div class="content"><section id="homepage-guarantee"> <div class="container"> 	<div class="row">  <div class="col-md-7 mb">  	<div class="guarantee tinted">   <h2>YOUR SATISFACTION IS GUARANTEED.</h2>   <p>   	As a small Vermont company, each customer matters to us. We   	promise that every contact with us - from sale to service to   	ongoing support - will be friendly, responsive, and reliable.   	Give us a try . . . we won't let you down!   </p>  	</div>  </div>  <div class="col-md-5">  	<h2>buy with confidence</h2>  	<div class="badge badge-primary">   <h1><em>2</em></h1>   <p>YEAR WARRANTY (MOWERS)</p>  	</div>  	<div class="badge badge-secondary">   <h1><em>6</em></h1>   <p>MONTH HANDS-ON TRIAL</p>  	</div>  </div> 	</div> </div></section></div> -->
