--- a/Content Zones/home.html
+++ b/Content Zones/home.html
@@ -1,7 +1,7 @@
 				<div class="content"><a href="/mowers"><picture><source media="(max-width: 780px)" srcset="https://dam.generac.com/ImConvServlet/imconv/da7a034cc9741bd13157e0cee3bcbaec8ff1ce92/original">
 <img alt="" srcset="https://dam.generac.com/ImConvServlet/imconv/a2742f78fdb2eaa345c7cf966bd85b19166fa3d0/original"></picture></a></div><div class="row tinted">
 			<div class="col-md-5 mb">
-				<a href="/neuton-accessories"><img src="/medias/battery.jpg?context=bWFzdGVyfGltYWdlc3w0MDA2OHxpbWFnZS9qcGVnfGltYWdlcy9oMjYvaDIyLzg3OTcwNjk2NzI0NzguanBnfDAwYTk5OTk0NGJjNDU4MmFiMDFjNGU4N2I5MDAzNWQ3N2QxYzVhYzZhZGViOWYxNjA4M2U0MWFjODE2OTM2Mzk" alt="batteries"></a>
+				<a href="/neuton-accessories"><img srcset="https://dam.generac.com/ImConvServlet/imconv/09e2143d3fefb99eb59a89c64896aedaba9516f7/original" alt="batteries"></a>
 			</div>
 			<div class="col-md-5 col-md-offset-2">
 				<a href="/yard-tools"><img src="/medias/yard-tools.jpg?context=bWFzdGVyfGltYWdlc3wzOTYxM3xpbWFnZS9qcGVnfGltYWdlcy9oMzIvaDZjLzg3OTcwNjk1NDE0MDYuanBnfDYwNDE5MGEyNWEwNTJjNTc2NjY3ZDNjMDkyYTQ1ZGQ0OGNkZDNmZWUwOTg1Y2Y2N2IxMGZlNzAyYWM5OTVmZGY" alt="yard tools"></a>
