change tech hours

--- a/Static Pages/customer-service.html
+++ b/Static Pages/customer-service.html
@@ -39,8 +39,8 @@
         <p>Monday - Friday 8:30am - 5:00pm Eastern Time<br />
           Saturday &amp; Sunday Closed</p>
         <h5>Technical Support</h5>
-        <p>Monday - Saturday 8:30am - 5:00pm Eastern Time<br />
-           Sunday Closed</p>
+        <p>Monday - Friday 8:30am - 5:00pm Eastern Time<br />
+           Saturday &amp; Sunday Closed</p>
         <!--<h4>Live Chat</h4>
             <a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;"><img src="/_site2/images/neuton/liveperson.gif" alt="Live Chat"></a>
             <h5>Sales</h5>
