--- a/Content Zones/home.html
+++ b/Content Zones/home.html
@@ -1,5 +1,11 @@
-				<div class="content"><a href="/mowers"><picture><source media="(max-width: 780px)" srcset="https://dam.generac.com/ImConvServlet/imconv/da7a034cc9741bd13157e0cee3bcbaec8ff1ce92/original">
-<img alt="" srcset="https://dam.generac.com/ImConvServlet/imconv/a2742f78fdb2eaa345c7cf966bd85b19166fa3d0/original"></picture></a></div><div class="row tinted">
+<div class="content"><a href="/neuton-accessories">
+		<picture>
+			<img alt=""
+				srcset="https://dam.generac.com/ImConvServlet/imconv/23096245377c58d24191edec3bf4ea5f934404f3/original">
+		</picture>
+	</a></div>
+
+<!-- <div class="row tinted">
 			<div class="col-md-5 mb">
 				<a href="/neuton-accessories"><img srcset="https://dam.generac.com/ImConvServlet/imconv/09e2143d3fefb99eb59a89c64896aedaba9516f7/original" alt="batteries"></a>
 			</div>
@@ -43,7 +49,7 @@
 			</div>
 			<div class="col-md-6"> <h2 class="text-uppercase mb-4 homepage-products-title">SPARE BATTERY</h2> <h5 class="mb-4 homepage-products-tagline"> 	<strong>Never Run Out of Charge with DR's LiPRO Interchangeable Battery System</strong> </h5> <p class="mb-4 homepage-products-description"> 	What happens if you run out of charge before you've finished mowing your lawn? Some battery-electric mowers have their batteries built-in, forcing you to stop mowing while you wait for them to recharge. But with the DR® Battery-Powered Yard Tools LiPRO battery, if it runs low, simply drop in a freshly-charged spare in seconds and keep right on working. </p> </div></div>
 	</div>
-</section>
+</section> -->
 
 <!-- <section id="homepage-bottom-banner" class="mt-5">
 		</section>
