--- a/Static Pages/customer-service.html
+++ b/Static Pages/customer-service.html
@@ -4,9 +4,7 @@
       <div class="col-12">
         <h1>Customer Service</h1>
         <!--<a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;"><img src="/_site2/images/neuton/liveperson.gif" alt="Live Chat" class="floatRight"></a> -->
-        <p>It's our goal at Neuton to earn your loyalty through exceptional products and customer service that is second
-          to none. Whether it's before, during, or after the sale, you can rely on our dedicated service team every time
-          you need us.</p>
+        <p>It's our goal at Neuton to earn your loyalty through exceptional products and customer service that is second to none. Whether it's before, during, or after the sale, you can rely on our dedicated service team every time you need us.</p>
       </div>
     </div>
     <div class="row">
@@ -14,10 +12,9 @@
         <h3>Contact information</h3>
         <p><strong>Phone:</strong> 1-800-798-2921</p>
         <p><strong>Fax:</strong> 1-802-951-8497<br />
-          <strong>Toll Free Fax:</strong> 1-800-929-5012
-        </p>
+          <strong>Toll Free Fax:</strong> 1-800-929-5012</p>
         <!--<p><strong>Live Chat:</strong> <a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;">Click here</a> to chat live with a Neuton Customer Service representative</p> -->
-        <!--  <p><strong>Email:</strong> <a href="/pages/content/contact">click here</a></p>-->
+      <!--  <p><strong>Email:</strong> <a href="/pages/content/contact">click here</a></p>-->
         <h4>Mailing Address:</h4>
         <p>Neuton Power<br />
           800 Hinesburg Rd<br />
@@ -29,7 +26,7 @@
         <p>Monday-Friday 8:00am - 4:30pm Eastern Time<br />
           Phone: 1-802-870-1437<br />
           Fax: 1-802-877-1216<br />
-        </p>
+          </p>
       </div>
       <div class="col-6">
         <h3>Hours of operation:</h3>
@@ -42,8 +39,8 @@
         <p>Monday - Friday 8:30am - 5:00pm Eastern Time<br />
           Saturday &amp; Sunday Closed</p>
         <h5>Technical Support</h5>
-        <p>Monday - Saturday 8:30am - 5:00pm Eastern Time<br />
-          Sunday Closed</p>
+        <p>Monday - Friday 8:30am - 5:00pm Eastern Time<br />
+          Saturday &amp; Sunday Closed</p>
         <!--<h4>Live Chat</h4>
             <a href="#" target="chat" onclick="window.open('/pages/content/chat','','width=590,height=790,scrollbars=no');return false;"><img src="/_site2/images/neuton/liveperson.gif" alt="Live Chat"></a>
             <h5>Sales</h5>
@@ -63,8 +60,7 @@
     <p>
         Monday - Friday 8:30am - 5:00pm Eastern Time<br>
 		Saturday &amp; Sunday Closed
-    </p> -->
-      </div>
+    </p> --></div>
     </div>
   </div>
 </div>
